--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -82,7 +82,8 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  width: clamp(300px, 50vw, 400px);
+  height: auto;
 }
 
 .card:hover,
