--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -13,19 +13,19 @@
 }
 
 .footer {
-  display: flex;
-  flex: 1;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.footer a:link,
+.footer a:visited {
+  color: #7bd3f7;
+}
+
+.footer a:hover {
+  color: #48b4e0;
+  text-decoration: underline;
 }
 
 .title a {
