(#35) - Added different text color based on realtime price relative to pirce paid for position

--- a/client/styles/PositionGrid.module.css
+++ b/client/styles/PositionGrid.module.css
@@ -4,3 +4,16 @@
   outline: 2px solid grey;
   text-align: left;
 }
+
+.rtPriceLower {
+  color: red;
+}
+
+.rtPriceHigher {
+  color: greenyellow;
+}
+
+.rtPriceHigher,
+.rtPriceLower {
+  font-size: calc(100% - 3px);
+}
