--- a/client/styles/StockDetail.module.css
+++ b/client/styles/StockDetail.module.css
@@ -20,8 +20,7 @@
   font-size: 15px;
   display: flex;
   flex-wrap: wrap;
-  min-width: 1000px;
-  width: 95vw;
+  width: 100%;
   margin: 10px 0;
 }
 
